--- a/stylesheets/utility.css
+++ b/stylesheets/utility.css
@@ -45,4 +45,11 @@ code {
 }
 
 
-
+blockquote {
+  font-style: italic;
+  font-family: serif;
+  font-size: 1.3em;
+  border-left: 10px solid #aaa;
+  padding-left: 1em;
+  color: #777;
+}
