--- a/stylesheets/ars.css
+++ b/stylesheets/ars.css
@@ -25,17 +25,13 @@
 body,
 body .remark-slide-content {
   font-family: 'Ars', 'Open Sans', sans-serif;
-  font-size: 1.5em;
 }
 
 body .remark-slide-content h1,
 h1,
 p strong em
  {
-  font-weight: 900;
   font-weight: bold;
-  font-size: 100px;
-  line-height: 80px;
   letter-spacing: 1px;
   text-transform: uppercase;
   color: rgb(0, 0, 0);
@@ -47,10 +43,9 @@ strong,
 h2 {
   font-weight: 900;
   font-weight: bold;
-  line-height: 1em;
   letter-spacing: 1px;
   text-transform: uppercase;
-  color: rgb(197, 158, 22);
+  color: rgb(197, 84, 22);
 }
 
 body .remark-slide-content h3,
@@ -60,9 +55,6 @@ h3 {
   font-weight: bold;
   letter-spacing: .05em;
   text-transform: uppercase;
-  line-height: 48px;
-  margin: 10px 0;
-  font-size: 48px;
   color: rgb(109, 153, 211);
 }
   
@@ -70,8 +62,6 @@ body .remark-slide-content li > strong,
 body .remark-slide-content li > p > strong {
   font-weight: bold;
   font-family: 'Ars', 'Open Sans', sans-serif;
-  line-height: .8;
-  font-size: 45px;
   color: rgb(93, 92, 92);
 }
 
@@ -79,19 +69,13 @@ body .remark-slide-content li > em,
 body .remark-slide-content li > p > em {
   font-style: italic;
   font-family: 'Ars', 'Open Sans', sans-serif;
-  line-height: .8;
-  font-size: 45px;
   color: rgb(93, 92, 92);
 }
 
 body .remark-slide-content h3 {
-  font-weight: 400;
   font-weight: normal;
   font-style: italic;
-  line-height: 48px;
-  margin: 10px 0;
-  font-size: 48px;
-  color: rgb(185, 0, 32);
+  color: rgb(157, 30, 62);
 }
 
 .light {
@@ -103,30 +87,21 @@ body .remark-slide-content blockquote {
   text-align: justify;
   font-weight: 300;
   font-style: italic;
-  line-height: 1.4;
-  margin: 20px 0;
-  padding: 10px 0;
-  border-top: 1px solid #aaa;
-  border-bottom: 1px solid #aaa;
-  width: 1060px;
+  /* line-height: 1.4; */
+  /* margin: 20px 0; */
+  /* padding: 10px 0; */
+  /* border-top: 1px solid #aaa; */
+  /* border-bottom: 1px solid #aaa; */
+  /* width: 1060px; */
 }
 
 table {
-  width:100%;
-}
-.present a {
-  /* pointer-events: auto;  [> Enable Click on link <] */
+  /* width:100%; */
 }
 
 a {
-  /* pointer-events: none;  [> Fix Body Click <] */
   color: inherit;
   text-decoration: none;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
   font-weight:bold;
 }
 
@@ -136,11 +111,6 @@ a:hover {
 
 p {
   font-weight: 400;
-  line-height: 2em;
-}
-li {
-  margin: 10px 0;
-  line-height: 1.5em;
 }
 
 body .inverse h1 {
